--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "devDependencies": {
     "@nuxt/content": "^2.13.4",
     "@nuxt/devtools": "latest",
+    "@nuxt/fonts": "^0.10.2",
     "@nuxt/ui": "^2.19.2",
-    "nuxt": "^3.14.159"
+    "icons": "^1.0.0",
+    "nuxt": "^3.14.159",
+    "nuxt-icons": "^3.2.1"
   }
 }
