--- a/package.json
+++ b/package.json
@@ -13,11 +13,16 @@
     "@nuxt/content": "^2.13.4",
     "@nuxt/devtools": "latest",
     "@nuxt/fonts": "^0.10.2",
+    "@nuxt/typescript-build": "^3.0.2",
     "@nuxt/ui": "^2.19.2",
+    "@pinia/nuxt": "^0.9.0",
     "@vue/runtime-dom": "^3.5.13",
     "icons": "^1.0.0",
     "nuxt": "^3.14.159",
     "nuxt-icons": "^3.2.1",
     "vue-tsc": "^2.1.10"
+  },
+  "dependencies": {
+    "pinia": "^2.3.0"
   }
 }
