--- a/package.json
+++ b/package.json
@@ -12,17 +12,23 @@
   "devDependencies": {
     "@nuxt/content": "^2.13.4",
     "@nuxt/devtools": "latest",
-    "@nuxt/fonts": "^0.10.2",
+    "@nuxt/fonts": "^0.10.3",
     "@nuxt/typescript-build": "^3.0.2",
-    "@nuxt/ui": "^2.19.2",
+    "@nuxt/ui": "^2.20.0",
+    "@nuxtjs/tailwindcss": "^6.13.0",
     "@pinia/nuxt": "^0.9.0",
     "@vue/runtime-dom": "^3.5.13",
+    "autoprefixer": "^10.4.20",
     "icons": "^1.0.0",
-    "nuxt": "^3.14.159",
+    "nuxt": "^3.15.1",
     "nuxt-icons": "^3.2.1",
-    "vue-tsc": "^2.1.10"
+    "postcss": "^8.4.49",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
+    "vue-tsc": "^2.2.0"
   },
   "dependencies": {
+    "@nuxtjs/color-mode": "^3.5.2",
     "pinia": "^2.3.0"
   }
 }
